@@ -7,4 +7,5 @@ project.flavor.energy-skate-park-basics.mainclass= edu.colorado.phet.energyskate
 
 project.flavor.energy-skate-park-basics-study-dallas-jan-2012.mainclass= edu.colorado.phet.energyskatepark.basics.EnergySkateParkBasicsApplication
 project.flavor.energy-skate-park-basics-study-dallas-jan-2012.args= -study dallas-jan-2012
+project.flavor.energy-skate-park-basics-study-dallas-jan-2012-id.args= -study dallas-jan-2012-id
 project.flavor.energy-skate-park-basics-study-dallas-jan-2012.security=all-permissions
